# cjm-capability-graph-sqlite

./: README.md  capability.html  capability.html.md  environment.yml  index.html  pyproject.toml  query_translation.html  query_translation.html.md  robots.txt  search.json  sitemap.xml
cjm_capability_graph_sqlite/: _modidx.py  capability.py  query_translation.py
cjm_graph_plugin_sqlite/: _modidx.py  meta.py  plugin.py  query_translation.py
nbs/: capability.ipynb  index.ipynb  meta.ipynb  nbdev.yml  plugin.ipynb  query_translation.ipynb
tests_manual/: test_sqlite_graph.md  validate_stage4_graph_storage_e2e.py
