[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-capability-graph-sqlite"
dynamic = ["version"]
description = "A local, file-backed context-graph storage capability for the cjm-substrate runtime that implements graph storage, traversal, and querying using SQLite."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm-substrate>=0.0.51', 'cjm-context-graph-primitives>=0.0.12']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-capability-graph-sqlite"
Documentation = "https://cj-mills.github.io/cjm-capability-graph-sqlite"

[project.entry-points.nbdev]
cjm_capability_graph_sqlite = "cjm_capability_graph_sqlite._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_capability_graph_sqlite.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_capability_graph_sqlite*"]

[tool.nbdev]
